[package]
name = "testing_area"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.14.0", features = ["dynamic_linking"] }
better_button = { path = "../better_button" }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[target.x86_64-pc-windows-msvc]
linker = "rust-lld.exe"
